--- a/Assets/_Interlife/Scripts/Core/Interlife.Core.asmdef
+++ b/Assets/_Interlife/Scripts/Core/Interlife.Core.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Interlife.Core",
     "rootNamespace": "Interlife.Core",
-    "references": [],
+    "references": [
+        "Unity.InputSystem"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
